// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`worker should emit error: error 1`] = `
Array [
  "/entry.css:1:1: Unknown word",
]
`;

exports[`worker should minify css: result 1`] = `
Object {
  "errors": Array [],
  "outputs": Array [
    Object {
      "code": ".foo{color:red}.bar{color:coral}",
      "map": "{\\"version\\":3,\\"sources\\":[\\"entry.css\\"],\\"names\\":[],\\"mappings\\":\\"AAAA,KAAK,SAAU,CACf,KAAK,WAAY\\",\\"file\\":\\"entry.css\\",\\"sourcesContent\\":[\\".foo{color:red;}\\\\n.bar{color:coral;}\\"]}",
    },
  ],
  "warnings": Array [],
}
`;

exports[`worker should work inputSourceMap as prev: result 1`] = `
Object {
  "errors": Array [],
  "outputs": Array [
    Object {
      "code": ".foo{color:red}.bar{color:coral}",
      "map": "{\\"version\\":3,\\"sources\\":[\\"entry.css\\"],\\"names\\":[],\\"mappings\\":\\"AAAA,KAAK,SAAU,CACf,KAAK,WAAY\\",\\"file\\":\\"entry.css\\",\\"sourcesContent\\":[\\".foo{color:red;}\\\\n.bar{color:coral;}\\"]}",
    },
  ],
  "warnings": Array [],
}
`;

exports[`worker should work options.minify function: result 1`] = `
Object {
  "errors": Array [],
  "outputs": Array [
    Object {
      "code": ".minify {};",
      "map": undefined,
    },
  ],
  "warnings": Array [],
}
`;
